<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".Calculator"
    android:background="@color/navy">

    <TextView
        android:id="@+id/Select_date"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:hint="@string/SelectDateText"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/Food_cat"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Select_date" />


    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:text="@string/breakfast"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <EditText
        android:id="@+id/editBreakfast"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textview3"
        app:layout_constraintTop_toBottomOf="@+id/Select_date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/lunch"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview3" />


    <EditText
        android:id="@+id/editLunch"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="116dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/editBreakfast" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="37dp"

        android:layout_marginTop="4dp"
        android:text="@string/Exercise_cat"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/gym_string"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <EditText
        android:id="@+id/gymId"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView10"
        app:layout_constraintTop_toTopOf="@+id/editLunch" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_string"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView10" />


    <EditText
        android:id="@+id/sportId"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView13"
        app:layout_constraintTop_toBottomOf="@id/gymId" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/food"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView13" />

    <TextView
        android:id="@+id/Food_total"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="60dp"
        android:text="@string/ftotal"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView16"
        app:layout_constraintTop_toTopOf="@+id/sportId" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/exercise"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/Exercise_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/etotal"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView17"
        app:layout_constraintTop_toBottomOf="@id/Food_total" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:text="@string/net"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/net_total"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginLeft="172dp"
        android:text="@string/ntotal"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView18"
        app:layout_constraintTop_toBottomOf="@id/Exercise_total" />

    <Button
        android:id="@+id/saveIdButton"
        android:layout_width="139dp"
        android:layout_height="58dp"
        android:onClick="onSaveEntry"
        android:text="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="139dp"
        android:layout_height="58dp"

        android:layout_marginStart="36dp"

        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/saveIdButton"
        android:text="@string/exitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/saveIdButton"
        app:layout_constraintStart_toEndOf="@+id/saveIdButton"
        android:onClick="onBackClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>