<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/navy">



    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titleText"
        android:textSize="30dp" />

    <Button
        android:id="@+id/CalculatorButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView8"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="244dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_calculator"
        android:onClick="onCalculator"
        android:scaleType="fitCenter" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CalculatorButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="22dp"
        android:text="@string/DiaryEntriesText"
        android:textSize="20dp" />



    <TextView
        android:id="@+id/textView11"
        android:layout_width="401dp"
        android:layout_height="58dp"
        android:layout_below="@id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/DateText"
        android:textSize="18dp" />


    <TextView
        android:id="@+id/textView00"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_below="@id/textView9"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="11dp"
        android:layout_toLeftOf="@id/textView11"
        android:text="@string/nkiText"
        android:textSize="18dp" />

    <ListView
        android:id="@+id/listOfItems"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/textView00"
        />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/averageText"
        android:textSize="19dp" />

    <TextView
        android:id="@+id/showAvg"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="280dp"
        android:layout_marginBottom="-1dp"
        android:hint="@string/averageAns"
        android:textSize="19dp" />

</RelativeLayout>